# cloud-ai

./: dataset.py  labels.csv  main.py  pyproject.toml  train.py
dataset/ann/: 2021-12-01-08-11-00.jpg.json  2021-12-01-08-15-00.jpg.json  2021-12-01-08-18-00.jpg.json  2021-12-01-08-22-00.jpg.json  2021-12-01-08-26-00.jpg.json  2021-12-01-08-28-00.jpg.json  2021-12-01-08-30-00.jpg.json  2021-12-01-08-34-00.jpg.json  2021-12-01-08-38-00.jpg.json  2021-12-01-08-41-00.jpg.json  2021-12-01-08-46-00.jpg.json  2021-12-01-08-50-00.jpg.json  2021-12-01-08-53-00.jpg.json  2021-12-01-08-58-00.jpg.json  2021-12-01-09-02-00.jpg.json  2021-12-01-09-06-00.jpg.json  2021-12-01-09-10-00.jpg.json  2021-12-01-09-14-00.jpg.json  2021-12-01-09-18-00.jpg.json  2021-12-01-09-22-00.jpg.json  2021-12-01-09-26-00.jpg.json  2021-12-01-09-30-00.jpg.json  2021-12-01-09-34-00.jpg.json  2021-12-01-09-38-00.jpg.json  2021-12-01-09-42-00.jpg.json  2021-12-01-09-50-00.jpg.json  2021-12-01-09-54-00.jpg.json  2021-12-01-09-56-00.jpg.json  2021-12-01-09-58-00.jpg.json  2021-12-01-09-59-00.jpg.json  2021-12-01-10-02-00.jpg.json  2021-12-01-10-06-00.jpg.json  2021-12-01-10-28-00.jpg.json  2021-12-01-10-29-00.jpg.json  2021-12-01-11-12-00.jpg.json  2021-12-01-11-14-00.jpg.json  2021-12-01-11-16-00.jpg.json  2021-12-01-11-18-00.jpg.json  2021-12-01-11-20-00.jpg.json  2021-12-01-11-24-00.jpg.json  (+1460 more)
